--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,1 +1,4 @@
 <h1>Index page</h1>
+<% @products.each do |product| %>
+    <p><%= link_to product.name, product_path(product) %></p>
+    <% end %>
