added link on producer page to create new product

--- a/app/views/users/_producer.html.erb
+++ b/app/views/users/_producer.html.erb
@@ -1,1 +1,5 @@
-I producer <%= @user.producer? %>
+<div class="container">
+  I producer <%= @user.producer? %>
+
+  <p><%= link_to "List a new product", new_product_path %> </p>
+</div>
