--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,4 +1,5 @@
 <div class="container">
+
 <%= simple_form_for [@product] do |f| %>
   <%= f.input :name %>
   <%= f.input :category %>
@@ -10,4 +11,7 @@
   <%= f.submit %>
 <% end %>
 
+
+<%= link_to "back", user_path(current_user) %>
 </div>
+
