--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,6 +1,11 @@
-<h1>Index page</h1>
+<div class="container">
 
-<% @products.each do |product| %>
-    <p><%= link_to product.name, product_path(product) %></p>
-    <% end %>
+  <h1> <%= @products.count %> Results found</h1>
 
+  <% @products.each do |product| %>
+      <p><%= link_to product.name, product_path(product) %></p>
+  <% end %>
+
+  <h5><%=link_to "make another search", user_path(current_user)%></h5>
+
+</div>
