--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -15,6 +15,8 @@
         <p>Unfortunately, this piece of packaging cannot be recycled yet. Please put it in the general waste bin.</p>
         <p>Would you like to buy more sustainable products in the future? <strong><%= link_to "We found these alternatives for you!", products_path %></strong></p>
     <% end %>
+
+    <%= link_to "back to results", products_path %>
   </div>
 
 </div>
