--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   </head>
   <body style="background-color:#F9F7E8;">
     <div class="main-container">
-      <% if !params[:action] == 'home' %>
+      <% if !params[:action] == 'home' && (!params[:action] == 'new' && params[:controller] == 'devise/registrations') %>
         <%= render 'shared/navbar' %>
       <% end %>
       <%= render 'shared/flashes' %>
