--- a/app/assets/stylesheets/pages/_SignUp.scss
+++ b/app/assets/stylesheets/pages/_SignUp.scss
@@ -1,11 +1,25 @@
 h2{
   text-align: center;
-  font-family: roboto;
+  font-family: georgia;
   font-size: 20px;
+  padding-top: 20px;
+  text-shadow: 1px 1px black;
+}
+
+.backbtn {
+  color: white;
+  background-color: #4BC999;
+  margin: 20px;
+  position: static;
+  border: 10px;
+  color: black;
+  border-radius: 10px;
+  padding: 5px;
 }
 
 .form-inputs{
   border-radius: 20px;
+  padding-bottom: 20px;
   padding-top: 20px;
   padding-left: 50px;
   padding-right: 10px;
@@ -29,6 +43,8 @@ font-weight: bold;
 font-size: 20px;
 line-height: 23px;
 text-align: center;
+margin-top: 30px;
+margin-left: 20px;
 
 color: #FFFFFF;
 }
