Add dotenv - Protect my secret data in .env file

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -9,10 +9,31 @@
   <% end %>
 
   <div>
-    <% if @product&.fully_recyclability? %>
-        <p>Great news! This piece of packaging is made of <%= @material&.category %> and can be recycled. Please put it into your recycling bin!</p>
+    <% if @product&.fully_recyclability.round == 100 %>
+        <p>Great news! This piece of packaging is made of</p>
+        <ul>
+        <% @materials.each do |material|%>
+        <li><%= material.name %></li>
+        <%end%>
+        </ul>
     <% else %>
-        <p>Unfortunately, this piece of packaging cannot be recycled yet. Please put it in the general waste bin.</p>
+        <% recyclable_materials = @materials.select {|material| material.recyclability}  %>
+        <% not_recyclable_materials = @materials - recyclable_materials %>
+        <p>Unfortunately, this product is not fully recyclable.</p>
+        <p>This is the non recyclable material in your product:</p>
+        <ul>
+        <% not_recyclable_materials.each do |material|%>
+        <li> <%= material.name%></li>
+        <%end%>
+        </ul>
+        <% if recyclable_materials.any?%>
+        <p>This is the recyclable material in your product:</p>
+        <ul>
+        <% recyclable_materials.each do |material|%>
+        <li> <%= material.name%></li>
+        <%end%>
+        </ul>
+        <%end%>
         <p>Would you like to buy more sustainable products in the future? <strong><%= link_to "We found these alternatives for you!", products_path %></strong></p>
     <% end %>
 
