--- a/app/views/users/_consumer.html.erb
+++ b/app/views/users/_consumer.html.erb
@@ -1,15 +1,26 @@
-<div class="container">
-  <p>I'm a consumer</p>
+<div class="consumer-page" style="background-image: url(<%=  asset_path('signin.png') %>); background-size: cover; background-position: center;">
+<img src="/assets/main-logo.png" class="mainlogo2">
+  <div class="consumer-container">
+    <div class="textbox">
+    Lorem Ipsum is simply dummy text of the composition and layout before printing. Lorem Ipsum has been the standard false text of the printing press since the 1500s
+    </div>
+    <div class="consumerheading">
+     <p class="m-0">I'm a consumer!</p>
+    </div>
+    <div class="background3">
+      <div class="youritem">
+        <%= form_tag products_path, method: :get do %>
+          <%= text_field_tag :query,
+            params[:query],
+            class: "form-control",
+            placeholder: "What's your item?"
+          %>
+          <div class="youritembtn">
+            <%= submit_tag "Search", class: "btn btn-primary" %>
+          </div>
+        <% end %>
 
-  <%= form_tag products_path, method: :get do %>
-    <%= text_field_tag :query,
-      params[:query],
-      class: "form-control",
-      placeholder: "What's your item?"
-    %>
-    <%= submit_tag "Search", class: "btn btn-primary" %>
-  <% end %>
-
-
-
+      </div>
+    </div>
+  </div>
 </div>
