--- a/app/views/users/_consumer.html.erb
+++ b/app/views/users/_consumer.html.erb
@@ -2,7 +2,7 @@
 <img src="/assets/main-logo.png" class="mainlogo2">
   <div class="consumer-container">
     <div class="textbox">
-    Lorem Ipsum is simply dummy text of the composition and layout before printing. Lorem Ipsum has been the standard false text of the printing press since the 1500s
+    Lorem Ipsum is simply dummy text of the composition and layout before printing.
     </div>
     <div class="consumerheading">
      <p class="m-0">I'm a consumer!</p>
