--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -4,7 +4,7 @@
   <h1> <%= @products.count %> We've found something for you!</h1>
 
   <% @products.each do |product| %>
-    <p><%= cl_image_tag product.photo.key, height: 150, width: 150, crop: :fill %><%= link_to product.name, product_path(product) %></p>
+    <p><%= cl_image_tag product.photo.key, height: 150, width: 150, crop: :fill %><%= link_to product.name, product_path(product), class: 'product_box'%></p>
   <% end %>
 
   <h5><%=link_to "make another search", user_path(current_user), class: 'make_another_search' %></h5>
