changes to show page

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -285,7 +285,10 @@ h2{
   font-size: 10px;
   background-color: white;
   border-radius: 32px;
-  margin-top: 40px;
+  margin-top: 10px;
   padding-top: 10px;
 }
 
+.make_another_search{
+  background-color: green;
+}
