--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -2,10 +2,11 @@
 
   <h2>Product name: <%= @product.name %></h2>
   <h3>Category: <%= @product.category %></h3>
-
-  <% if @product.photo.attached? %>
-    <%= cl_image_tag @product.photo.key, height: 150, width: 150, crop: :fill %>
-  <% end %>
+  <div style="margin:40px">
+    <% if @product.photo.attached? %>
+      <%= cl_image_tag @product.photo.key, height: 150, width: 150, crop: :fill %>
+    <% end %>
+  </div>
 
   <div>
     <% if @product&.fully_recyclability.round == 100 %>
@@ -19,7 +20,9 @@
 
         <% recyclable_materials = @materials.select {|material| material.recyclability}  %>
         <% not_recyclable_materials = @materials - recyclable_materials %>
-        <p>Unfortunately, this product is not fully recyclable.</p>
+        <div style ="margin-top:20px;">
+
+        <p><span style="text-decoration: none; border-bottom: 1px solid red;">Unfortunately,</span> this product is not fully</span> recyclable.</p>
         <p>This is the non recyclable material in your product:</p>
         <ul>
         <% not_recyclable_materials.each do |material|%>
@@ -34,6 +37,8 @@
         <%end%>
         </ul>
         <%end%>
+
+        </div>
         <p>Would you like to buy more sustainable products in the future? <strong><%= link_to "We found these alternatives for you!", alternatives_product_path(@product) %></strong></p>
 
     <% end %>
