--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,14 +1,8 @@
 <div class="container">
-
-
-  <h2>Product name: <%= @product.name %></h2>
-  <h3>Category: <%= @product.category %></h3>
-  <div style="margin:40px">
-    <% if @product.photo.attached? %>
-      <%= cl_image_tag @product.photo.key, height: 150, width: 150, crop: :fill %>
-    <% end %>
-  </div>
-
+  <h2><%= @product.name %></h2>
+  <% if @product.photo.attached? %>
+    <%= cl_image_tag @product.photo.key, height: 150, width: 150, crop: :fill %>
+  <% end %>
   <div>
     <% if @product&.fully_recyclability.round == 100 %>
         <p>Great news! The packaging is made of</p>
@@ -29,31 +23,8 @@
         <p> It's not recyclable! Please put it in your general waste bin.</p>
         <p>TIP! Buy more sustainable products in the future <strong><%= link_to "We found these alternatives for you!", alternatives_product_path(@product) %></strong></p>
     <% else %>
-
         <% recyclable_materials = @materials.select {|material| material.recyclability}  %>
         <% not_recyclable_materials = @materials - recyclable_materials %>
-
-        <div style ="margin-top:20px;">
-
-        <p><span style="text-decoration: none; border-bottom: 1px solid red;">Unfortunately,</span> this product is not fully</span> recyclable.</p>
-        <p>This is the non recyclable material in your product:</p>
-        <ul>
-        <% not_recyclable_materials.each do |material|%>
-        <li> <%= material.name%></li>
-        <%end%>
-        </ul>
-        <% if recyclable_materials.any?%>
-        <p>This is the recyclable material in your product:</p>
-        <ul>
-        <% recyclable_materials.each do |material|%>
-        <li> <%= material.name%></li>
-        <%end%>
-        </ul>
-        <%end%>
-
-        </div>
-        <p>Would you like to buy more sustainable products in the future? <strong><%= link_to "We found these alternatives for you!", alternatives_product_path(@product) %></strong></p>
-
         <p>This packaging is made up of different materials. Before putting it into the bin, let's separate the components!</p>
         
           <% if recyclable_materials.any?%>
@@ -71,11 +42,7 @@
             <%end%>
             </ul>
           <p>TIP! Buy more sustainable products in the future <strong><%= link_to "We found these alternatives for you!", alternatives_product_path(@product) %></strong></p>
-
-
     <% end %>
-
     <%= link_to "back to results", products_path %>
   </div>
-
 </div>
