--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -7,8 +7,10 @@
   <% @products.each do |product| %>
 
   <div class="box">
-    <p><%= cl_image_tag product.photo.key, height: 150, width: 150, crop: :fill %> <div><%= link_to product.name, product_path(product), class: 'product_box'%> </div></p>
-  </div>
+    <p><%= cl_image_tag product.photo.key, height: 150, width: 150, crop: :fill %>
+      <div>
+      <%= link_to product.name, product_path(product), class: 'product_box'%> </div></p>
+    </div>
   <% end %>
 
 
