--- a/app/views/products/alternatives.html.erb
+++ b/app/views/products/alternatives.html.erb
@@ -13,7 +13,7 @@
 
   <div class="box">
     <p> <%= cl_image_tag alternative.photo.key, height: 150, width: 150, crop: :fill %>
-      <div>
+      <div class="text">
         <%= link_to alternative.name, product_path(alternative),class: 'product_box'%></div></p>
     </div>
   <% end %>
