--- a/app/views/users/_consumer.html.erb
+++ b/app/views/users/_consumer.html.erb
@@ -5,7 +5,7 @@
      Search any item below to find out information on its recyclability
     </div>
     <div class="consumerheading">
-     <p class="m-0">I'm a consumer!</p>
+     <p class="m-0">Welcome!</p>
     </div>
     <div class="background3">
       <div class="youritem">
