--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -292,3 +292,15 @@ h2{
 .make_another_search{
   background-color: green;
 }
+
+.newproduct3{
+  color: white;
+  font-size: 30px;
+  background-color: #FFC739;
+    border-radius: 20px;
+    padding-top: 12px;
+    padding-bottom: 5px;
+    text-align: center;
+    margin-left: 14px;
+    margin-right: 14px;
+}
