--- a/app/views/users/_producer.html.erb
+++ b/app/views/users/_producer.html.erb
@@ -1,8 +1,10 @@
+<div class="consumer-page" style="background-image: url(<%=  asset_path('signin.png') %>); background-size: cover; background-position: center;">
+<img src="/assets/main-logo.png" class="mainlogo2">
 <div class="container">
-  I producer <%= @user.producer? %>
-
+  <p>Welcome back!</p>
+  <div class= "newproduct3">
   <p><%= link_to "List a new product", new_product_path %> </p>
-
+  </div>
 
 </div>
 
