--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,8 @@
 <%= link_to "Sign out", destroy_user_session_path(@user), method: :delete %>
   <img src="/assets/main-logo.png" class="mainlogo">
   <div class="intro">
-    Recycable helps the user to identify if a specific piece of packaging / clothes / electronics can be recycled depending on their postcode.
+    Recycable will help you identify if your item is recyclable. 
+    Let's sort it out!
 
   </div>
   <div class="buttons-wrapper">
