--- a/app/views/users/_producer.html.erb
+++ b/app/views/users/_producer.html.erb
@@ -1,5 +1,5 @@
 <div class="consumer-page" style="background-image: url(<%=  asset_path('signin.png') %>); background-size: cover; background-position: center;">
-<img src="/assets/main-logo.png" class="mainlogo2">
+<%= image_tag 'main-logo.png', class:"mainlogo2"%>
 <div class="container">
   <p>Welcome back!</p>
   <div class= "newproduct3">
