--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,9 +2,9 @@
 <%= link_to "Sign out", destroy_user_session_path(@user), method: :delete %>
   <%= image_tag 'main-logo.png', class: 'mainlogo'%>
   <div class="intro">
-    Recycable will help you identify if your item is recyclable. 
+    Recycling can be confusing but it doesn't have to.
+    We will help you identify if your item is recyclable. <br>
     Let's sort it out!
-
   </div>
   <div class="buttons-wrapper">
     <%= link_to "Sign up", new_user_registration_path, class: "btn sign-up-btn"%>
