--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -44,7 +44,7 @@ padding-top: 10px;
 .mainlogo{
   width: 100%;
   object-fit: cover;
- margin-top: 62px;
+  margin-top: 62px;
   margin-left: 15px;
   padding: 10px;
 }
@@ -126,6 +126,7 @@ h5{
     margin: 0 auto;
     position: relative;
     bottom: -1px;
+    padding-top: 5px;
 }
 
 
