--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,5 +1,6 @@
 <div style="background-image: url(<%=  asset_path('homepage.png') %>); background-size: cover; background-position: center; height: 100vh;" >
 <div class="container-index">
+<div class= "navbar-lewagon"> <div><%= link_to "Home", root_path%></div> <div><%= link_to "Sign out", destroy_user_session_path(@user), method: :delete %></div> </div>
 <div><%= image_tag 'main-logo.png', class: 'mainlogo-index'%></div>
    <div class="heading5">
   <h5> We found <%= @products.count %> products for you!</h5>
@@ -9,6 +10,16 @@
   <div class="box">
     <div class="images"><%= cl_image_tag product.photo.key, height: 100, width: 100, crop: :fill %></div>
       <div class="text"><p><%= link_to product.name, product_path(product)%></p> </div>
+      <% if product&.fully_recyclability.round == 100 %>
+      <div style="font-size: 30px; color: green; padding-top: 7px; padding-right: 7px;">
+        <i class="far fa-check-circle"></i> </div>
+      <% elsif product&.fully_recyclability.round == 0 %>
+       <div style="font-size: 30px; color: red; padding-top: 7px; padding-right: 7px;">
+        <i class="fas fa-exclamation-circle"></i></div>
+      <%else%>
+      <div style="font-size: 30px; color: orange; padding-top: 7px; padding-right: 7px;">
+        <i class="fas fa-exclamation-circle"></i></div>
+        <%end%>
     </div>
   <% end %>
 
