--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,11 +1,20 @@
-.navbar-lewagon {
+.navbar-recyclable {
   display: flex;
   justify-content: space-between;
-  background: transparent;
-  padding-top: 10px;
-  padding-left: 10px;
-  padding-right: 10px;
+  background-color:#FFC739;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
   font-size: 16px;
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+
+
+.logo-navbar {
+  width: 95px;
+  height: 50px;
 }
 
 .navbar-lewagon .navbar-collapse {
@@ -14,4 +23,10 @@
 
 .navbar-lewagon .navbar-brand img {
   width: 40px;
+}
+
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
 }
