--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -6,7 +6,7 @@
 <div class="container-index">
 <ul class= "navbar-recyclable"> 
   <li><%= image_tag 'main-logo.png', class: "logo-navbar"%></li> 
-  <li style="padding-top: 12px; padding-right: 10px;"><%= link_to "Sign out", destroy_user_session_path(@user), method: :delete %></li>
+  <li style="padding-top: 12px; padding-right: 10px;"><%= link_to "Back", user_path(current_user) %></li>
   </ul>
    <div class="heading5">
   <h5> We found <%= @products.count %> products for you!</h5>
