show and index css

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,12 +1,14 @@
-<%
+
+ <%
 =begin%>
- <div style="background-image: url(<%=  asset_path('homepage.png') %>); background-size: cover; background-position: center; height: 100vh;" > 
+ <div style="background-image: url(<%=  asset_path('homepage.png') %>); background-size: cover; background-position: center; height: 100vh;" >  
 <%
 =end%>
+
 <div class="container-index">
 <ul class= "navbar-recyclable"> 
   <li><%= image_tag 'main-logo.png', class: "logo-navbar"%></li> 
-  <li style="padding-top: 12px; padding-right: 10px;"><%= link_to "Back", user_path(current_user) %></li>
+  <li style="padding-top: 12px; padding-right: 10px;"><%= link_to "New search", user_path(current_user) %></li>
   </ul>
    <div class="heading5">
   <h5> We found <%= @products.count %> products for you!</h5>
@@ -28,9 +30,4 @@
         <%end%>
     </div>
   <% end %>
-
-
-</div>
-  <h5><%=link_to "new search", user_path(current_user), class: "new-search" %></h5>
-</div>
 </div>
