--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -38,41 +38,43 @@
         </div>
     <% elsif @product&.fully_recyclability.round == 0 %>
         <div class="recyclable-message">
-        <p style="font-size: 24px;">Not so great!</p>
+          <p style="font-size: 24px;">Not so great!</p>
         <div style="font-size: 60px; color: red">
-        <i class="fas fa-exclamation-circle"></i></div>
+          <i class="fas fa-exclamation-circle"></i></div>
           <ul style="list-style-type: none; margin: 0px; padding: 0px">
-          <% @materials.each do |material|%>
-            <li>This item is made of: <%= material.name %></li>
-          <%end%>
+            <% @materials.each do |material|%>
+              <li>This item is made of: <%= material.name %></li>
+            <%end%>
           </ul>
         <p>This type of material cannot be recycled! Make sure you put it into the general waste bin.</p>
-        <div class="tip"><strong>TIP:</strong> Buy more sustainable products in the future <strong><br><%= link_to "We found these alternatives for you!", alternatives_product_path(@product)%></strong>
-      </div>
+        <div class="tip"><strong>TIP:</strong> Buy more sustainable products in the future!</div>
+        <div class="zizi">
+          <%= link_to "We found these alternatives for you!", alternatives_product_path(@product) %>
+        </div>
     <% else %>
         <% recyclable_materials = @materials.select {|material| material.recyclability}  %>
         <% not_recyclable_materials = @materials - recyclable_materials %>
-        <div class="recyclable-message">
-        <p style="font-size: 24px;">Not too bad, almost there!</p>
-        <div style="font-size: 60px; color: orange">
-        <i class="fas fa-exclamation-circle"></i></div>
-        <p>This item is made up of different materials. Before putting it into the bin, let's separate the components!</p>
+          <div class="recyclable-message">
+            <p style="font-size: 24px;">Not too bad, almost there!</p>
+            <div style="font-size: 60px; color: orange">
+              <i class="fas fa-exclamation-circle"></i></div>
+              <p>This item is made up of different materials. Before putting it into the bin, let's separate the components!</p>
           <% if recyclable_materials.any?%>
             <ul style="list-style-type: none; margin: 0px; padding: 0px">
               <% recyclable_materials.each do |material|%>
               <li>Recyclable material: <%= material.name%></li>
               <%end%>
-              </ul>
-            <%end%>
+            </ul>
+          <%end%>
             <ul style="list-style-type: none; margin: 0px; padding: 0px">
               <% not_recyclable_materials.each do |material|%>
               <li>Non recyclable material: <%= material.name%></li>
               <%end%>
               </ul>
-        <div class="tip"><strong>TIP:</strong>Buy more sustainable products in the future.<br> <%= link_to "We found these alternatives for you!", alternatives_product_path(@product) %></div>
+        <div class="tip"><strong>TIP:</strong>Buy more sustainable products in the future.</div>
+        <div class="zizi">
+        <%= link_to "We found these alternatives for you!", alternatives_product_path(@product) %>
+        </div>
     <% end %>
-    <div class="zizi">
-    <%= link_to "back to results",products_path %>
-   </div>
 </div>
 </div>
