moved logo navbar to right

--- a/app/views/products/alternatives.html.erb
+++ b/app/views/products/alternatives.html.erb
@@ -5,8 +5,8 @@
 =end%>
 <div class="container-index">
 <ul class= "navbar-recyclable"> 
-<div><%= image_tag 'main-logo.png', class: "logo-navbar"%></div>
 <li style="padding-top: 12px; padding-right: 10px;"><%= link_to "Back", user_path(current_user) %></li>
+<li><%= image_tag 'main-logo.png', class: "logo-navbar"%></li> 
   </ul>
 
   <div class="heading5" style="padding-top: 65px;">
