--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -112,21 +112,22 @@ h5{
 .consumer-page {
   height: 100vh;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: start;
   align-items: center;
 }
 
 .consumerheading{
   color: white;
-    text-align: center;
-    font-size: 30px;
-    background-color: #FFB906;
-    border-radius: 20px 20px 0 0;
-    width: 70%;
-    margin: 0 auto;
-    position: relative;
-    bottom: -1px;
-    padding-top: 5px;
+  text-align: center;
+  font-size: 30px;
+  background-color: #FFB906;
+  border-radius: 20px 20px 0 0;
+  width: 70%;
+  margin: 0 auto;
+  position: relative;
+  bottom: -1px;
+  padding-top: 5px;
 }
 
 
@@ -179,9 +180,11 @@ h5{
 .mainlogo2{
   width: 100%;
   object-fit: cover;
-  padding: 10px;
-  margin-right: -377px;
-  padding-bottom: 450px;
+  margin: 100px 0 25px 0;
+  // padding: 10px;
+  // margin-right: -377px;
+  // padding-bottom: 450px;
+  // position: absolute;
 }
 
 .sign-in {
@@ -231,7 +234,11 @@ h2{
     background-color: #4BC999;
     border-color: #167FFB;
     border-radius: 20px;
+  //   @media(min-width: 1200px) {
+
+  // }
 }
+
 
 
 
