--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -2,9 +2,9 @@
 
 <%= simple_form_for [@product] do |f| %>
   <%= f.input :name %>
-  <%= f.input :category, collection: ['chocolate', 'rice', 'pizza'] %>
+  <%= f.input :category, collection: Product.pluck(:category).uniq %>
   <%= f.input :photo %>
-  <%= f.association :materials, multiple: true %>
+  <%= f.association :materials, multiple: true, collection: Material.all.map { |m| [ "#{m.name} - #{m.category}", m.id ] } %>
   <%= f.submit %>
 <% end %>
 
